# studioos-media

./: CMakeLists.txt  README.md
config/: config.json
proto/: media.proto
src/: main.cpp
src/config/: config.cpp  config.hpp
src/core/: MediaException.hpp  Result.hpp  StatusCode.hpp
src/ffmpeg/: AudioEncoder.cpp  AudioEncoder.hpp  CommandRunner.cpp  CommandRunner.hpp  FFmpeg.cpp  FFmpeg.hpp  ThumbnailGenerator.cpp  ThumbnailGenerator.hpp  VideoConverter.cpp  VideoConverter.hpp  VideoEncoder.cpp  VideoEncoder.hpp
src/grpc/: MediaServer.cpp  MediaServer.hpp
src/media/: AudioProcessor.cpp  AudioProcessor.hpp  ImageProcessor.cpp  ImageProcessor.hpp  VideoProcessor.cpp  VideoProcessor.hpp
src/server/: MediaServer.cpp  MediaServer.hpp
src/services/: AdService.cpp  AdService.hpp  AudioService.cpp  AudioService.hpp  ImageService.cpp  ImageService.hpp  MediaJobDispatcher.cpp  MediaJobDispatcher.hpp  MediaJobService.cpp  MediaJobService.hpp  StreamingService.cpp  StreamingService.hpp  VideoService.cpp  VideoService.hpp
src/storage/: S3Storage.cpp  S3Storage.hpp
src/utils/: FileUtils.cpp  FileUtils.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
temp/: concat.txt
temp/avif-check/: test.avif
tests/: ad_service_test.cpp  audio_processor_test.cpp  grpc_ad_service_test.cpp  grpc_media_callback_test.cpp  grpc_media_job_test.cpp  image_processor_test.cpp  media_job_service_test.cpp  s3_storage_test.cpp  streaming_service_test.cpp  video_processor_test.cpp
